src/objects/DNC_Authority__c.object
<CustomObject>
    <fields>
        <fullName>Inbound_Exemption_Days__c</fullName>
        <label>Inbound Exemption Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Storage_Exemption_Days__c</fullName>
        <label>Storage Exemption Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Trade_Exemption_Days__c</fullName>
        <label>Trade Exemption Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>DNC Authority</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>DNC Authority Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DNC Authority</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>